# so4t_api_wrapper

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  so4t_api.py  test_so4t_api.py
.github/workflows/: pr_agent.yml  qodo-cover.yml
so4t_api/: __init__.py  so4t_api.py
tests/: test_so4t_api.py
